2014-03-21
==========
! BREAKING CHANGE: Underscope (_) removed from generated typed table classes.
! BREAKING CHANCE: Constructor for TDBContext has been renamed to contextWithPersistenceToFile:

2014-08-20
==========
* [TDBQuery parent] and [TDBQuery subtable:] selectors now return self.
! BREAKING CHANCE: Header files are renamed so names match class names.

2014-03-18
==========
! BREAKING CHANGE: Typed interface Cursor has now been renamed to Row.
! BREAKING CHANGE: TDBGroup has been renamed to TDBTransaction.
+ getTableWithName selector added on group.
* getting and creating table methods on group no longer take error argument.

2014-03-17
==========
+ Added firstRow, lastRow selectors on view.
* firstRow and lastRow on table now return nil if table is empty.

2014-03-14
==========
! BREAKING CHANGE: Prepend TDB-prefix on all classes and types.

2014-03-13
==========
+ Adding setObject to TightdbTable (t[2] = @[@1, @"Hello"] is possible).

2014-03-12
==========
+ Adding insertRow to TightdbTable.

2014-03-11
==========
* Extending appendRow to accept NSDictionary.
! BREAKING CHANGE: Most selectors have been renamed in the binding!

2014-03-10
==========
* Return types and parameters changed from size_t to NSUInteger.

2014-03-07
==========
* Adding appendRow to TightdbTable.
* Adding object subscripting.
* Adding method removeColumn on table.

2014-03-05
==========
+ tableview now supports sort on column with column type bool, date and int
+ tableview has method for checking the column type of a specified column
+ tableview has method for getting the number of columns
* Adding methods getVersion, getCoreVersion and isAtLeast.

2014-02-27
==========
* Adding a simple class for version numbering.
* Adding get-version and set-version targets to build.sh.
! BREAKING CHANGE: addRow renamed to addEmptyRow

2013-11-08
==========
* Adding support for one-line installer (suppressing output and don't die too hard).